<resources>
    <string name="app_name" translatable="false">Brick Picker</string>
    <string name="nav_header_title" translatable="false">Brick Picker</string>
    <string name="nav_header_subtitle" translatable="false">myBrickHub.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="action_finish">Finish</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>

    <string name="menu_home">Orders</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_settings">Settings</string>

    <string name="selectMinAlert">Select at least one status.</string>

    <string name="consumerKey" translatable="false">ConsumerKey</string>
    <string name="consumerSecret" translatable="false">ConsumerSecret</string>
    <string name="tokenValue" translatable="false">TokenValue</string>
    <string name="tokensSecret" translatable="false">TokenSecret</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="resetConfirmTitle">Confirm reset</string>
    <string name="resetConfirm">Do you really want to reset?</string>
    <string name="pickOrder">Pick Order</string>
    <string name="inventory_id">Inventory ID</string>
    <string name="remarks">Remarks</string>
    <string name="comments">Comments</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="quantity">Quantity</string>
    <string name="price_single">Price Single</string>
    <string name="price_total">Price Total</string>
    <string name="packed">Pack</string>
    <string name="viewItems">View Items</string>
    <string name="closeItems">Close Items</string>
    <string name="finishOrder">Finish Order</string>
    <string name="edit">Edit</string>
    <string name="guideTitle">How do I get my API credentials?</string>
    <string name="guide1">1. Login to Bricklink in your Browser</string>
    <string name="guide2">2. Go to: https://www.bricklink.com/v2/api/register_consumer.page</string>
    <string name="guide3">3. Generate Consumer Secret</string>
    <string name="guide4">4. Add Access Token (IP Address: 0.0.0.0 | IP Mask: 0.0.0.0)</string>
    <string name="guide5">5. Copy ConsumerKey, ConsumerSecret, TokenValue and TokenSecret</string>
    <string name="err">Error</string>
    <string name="apiTestFailed">The API could not be connected. Please check your entries or your internet connection. Also note that the Bricklink website must be accessible.</string>
    <string name="api_successfully_connected">API successfully connected</string>
    <string name="setupConnection">Setup connection to Bricklink</string>
    <string name="firstSetupMessage">You first have to connect to your Bricklink account before your orders can be displayed.</string>
    <string name="packedConfirmTitle">Set to Packed</string>
    <string name="packedConfirm">Do you really want to finish picking?</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="paid" translatable="false">Paid</string>
    <string name="not_paid" translatable="false">Not Yet Paid</string>
    <string name="notPaidConfirmTitle">Order not paid</string>
    <string name="continueConfirm">Do you really want to continue?</string>
    <string name="standardFeedback" translatable="false">Have fun with your bricks ♥</string>
    <string name="standardApiLimit" translatable="false">5000</string>
    <string name="please_enter_a_positive_value">Please enter a positive value</string>
    <string name="settingTextLimitApi">Set your own API calls limit. Bricklink usually limits API calls to a maximum of 5000 per day (Today\'s API counts: %1$d)</string>
    <string name="warning">Warning</string>
    <string name="apiLimitExceeded">The daily API limit has been reached. It is recommended not to continue until tomorrow.  However, you can proceed at your own risk. If usage is too high, Bricklink may contact you or block your API access.</string>
    <string name="buyerOrderCountWithLabel">Orders: %1$d</string>
    <string name="totalCountWithLabel">Items: %1$d</string>
    <string name="uniqueCountWithLabel">Lots: %1$d</string>
    <string name="totalWeightWithUnit" translatable="false">%1$s g</string>
    <string name="orderIdWithLabel" translatable="false">#%1$d</string>
    <string name="shipping_address_full" translatable="false">%1$s\n%2$s\n%3$s</string>
    <string name="dispCostSubtotalWithLabel">Subtotal: %1$s</string>
    <string name="dispCostShippingWithLabel">Shipping: %1$s</string>
    <string name="dispCostGrandTotalWithLabel" translatable="false">%1$s %2$s</string>
    <string name="dispCostEtc1WithLabel">Etc1: %1$s</string>
    <string name="dispCostEtc2WithLabel">Etc2: %1$s</string>
    <string name="dispCostInsuranceWithLabel">Insurance: %1$s</string>
    <string name="dispCostCreditWithLabel">Credit: %1$s</string>
    <string name="dispCostCouponWithLabel">Coupon: %1$s</string>
    <string name="dispCostVatRateWithLabel">VAT Rate: %1$s%%</string>
    <string name="dispCostVatAmountWithLabel">VAT Amount: %1$s</string>
    <string name="homeLastCheck">No Orders\n\nLast Check:\n%1$s</string>
    <string name="openSource">Open Source</string>
    <string name="support_the_developer">Support the developer</string>
    <string name="support_the_developer_uri" translatable="false">https://mybrickhub.com</string>
    <string name="address">Address</string>
    <string name="item_position" translatable="false">%1$d / %2$d</string>
    <string name="quantity_format" translatable="false">%1$dx</string>
    <string name="unit_price_format" translatable="false">%1$s %2$.2f</string>
    <string name="unit_price_total_format" translatable="false">%1$s %2$.2f</string>
    <string name="order">Order</string>
    <string name="cost">Cost</string>
    <string name="user">User</string>
    <string name="payment">Payment</string>
    <string name="shipping">Shipping</string>
    <string name="my_remarks">My Remarks</string>
    <string name="messages">Messages</string>
    <string name="when_finishing">When finishing</string>
    <string name="set_status_shipped">Set Status Shipped</string>
    <string name="send_drive_thru">Send Drive Thru</string>
    <string name="post_feedback">Post Feedback</string>
    <string name="archive_order">Archive Order</string>
    <string name="theme">Theme</string>
    <string name="select_your_theme">Select your theme</string>
    <string name="drive_thru">Drive Thru</string>
    <string name="should_a_cc_be_sent_to_you">Should a CC be sent to you?</string>
    <string name="order_messages">Order Messages</string>
    <string name="activate_order_messages_in_details_n_this_costs_one_more_api_call_per_order">Activate Order Messages in Details? (this costs one more API call per order)</string>
    <string name="feedback">Feedback</string>
    <string name="edit_the_feedback_that_should_be_automatically_given_to_the_buyer">Edit the feedback that should be automatically given to the buyer</string>
    <string name="limit_api">Limit API</string>
    <string name="filed_orders">Filed Orders</string>
    <string name="should_archived_orders_be_loaded">Should archived orders be loaded?</string>
    <string name="_1" translatable="false">1.</string>
    <string name="_2" translatable="false">2.</string>
    <string name="_3" translatable="false">3.</string>
    <string name="_4" translatable="false">4.</string>
    <string name="_5" translatable="false">5.</string>
    <string name="_6" translatable="false">6.</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="customize_your_sorting_order">Customize your sorting order</string>
    <string name="display">Display?</string>
    <string name="no_">No.</string>
    <string name="slash" translatable="false">/</string>

</resources>