<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list_alt"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_setup"
            android:icon="@drawable/ic_conversion_path"
            android:title="@string/menu_setup" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/favorite"
            android:title="@string/support_the_developer"
            android:onClick="openSupportPage" />
    </group>

</menu>