<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="10"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_action_sort"
        app:showAsAction="ifRoom">
        <menu />
    </item>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="20"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_action_filter"
        app:showAsAction="ifRoom">
        <menu />
    </item>

</menu>