<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mybrickhub.brickpicker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_from_home_to_setup"
            app:destination="@id/nav_setup" />

    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mybrickhub.brickpicker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_setup"
        android:name="com.mybrickhub.brickpicker.ui.setup.SetupFragment"
        android:label="@string/menu_setup"
        tools:layout="@layout/fragment_setup">

        <action
            android:id="@+id/action_from_setup_to_home"
            app:destination="@id/nav_home" />

    </fragment>

</navigation>