<!-- res/layout/list_item_order.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemArrayPositionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/slash"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumbImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="32dp"
                android:importantForAccessibility="no" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridLayout
                    android:id="@+id/itemDetailsListLayoutView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:paddingHorizontal="16dp"
                    android:rowCount="12"
                    android:visibility="gone">

                    <!-- Spalte 1 -->
                    <TextView
                        android:layout_row="0"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/inventory_id" />

                    <TextView
                        android:layout_row="1"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/remarks" />

                    <TextView
                        android:layout_row="2"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/comments" />

                    <TextView
                        android:layout_row="3"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/no_" />

                    <TextView
                        android:layout_row="4"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/name" />

                    <TextView
                        android:layout_row="5"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/type" />

                    <TextView
                        android:layout_row="6"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/color" />

                    <TextView
                        android:layout_row="7"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/category" />

                    <TextView
                        android:layout_row="8"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/condition" />

                    <TextView
                        android:layout_row="9"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/quantity" />

                    <TextView
                        android:layout_row="10"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/price_single" />

                    <TextView
                        android:layout_row="11"
                        android:layout_column="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:text="@string/price_total" />

                    <!-- Spalte 2 -->
                    <TextView
                        android:id="@+id/itemDetailsInventoryId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsRemarks"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsItemNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/itemDetailsItemName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsItemType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="5"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsColorName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="6"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/itemDetailsItemCategoryName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="7"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsCondition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="8"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsQuantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="9"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10"
                        android:paddingTop="8dp" />

                    <TextView
                        android:id="@+id/itemDetailsUnitPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="10"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                    <TextView
                        android:id="@+id/itemDetailsPriceTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_row="11"
                        android:layout_column="1"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="10" />

                </GridLayout>


            </ScrollView>

        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemSort0TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="48sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/itemSort1TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/itemSort2TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quantityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:textSize="48sp"
                    android:textStyle="bold" />

            </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/buttonFinishPick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/packed"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>

